# oasis-utils

./: .gitignore  CMakeLists.txt  LICENSE  OASIS_On_Disk_Data_Structures.md  README.md  check_source.sh  mm_serial_win32.c  oasis.c  oasis.h  oasis_check_imd.py  oasis_recv.c  oasis_send.c  oasis_sendrecv.c  oasis_sendrecv.h  oasis_utils.c  oasis_utils.h
.github/workflows/: cmake.yml  release.yml
disk_images/: OASIS_Users_Group_Vol01.img
man/man1/: oasis_check_imd.py.1  oasis_chkdsk.1  oasis_disk_util.1  oasis_initdisk.1  oasis_recv.1  oasis_send.1
src/: mm_serial.h  mm_serial_posix.c  mm_serial_win32.c  oasis.h  oasis_alloc.c  oasis_alloc.h  oasis_ascii.c  oasis_ascii.h  oasis_chkdsk.c  oasis_deb.c  oasis_deb.h  oasis_disk_util.c  oasis_endian.h  oasis_extract.c  oasis_extract.h  oasis_file_copy.c  oasis_file_copy.h  oasis_file_erase.c  oasis_file_erase.h  oasis_file_read.c  oasis_file_read.h  oasis_file_rename.c  oasis_file_rename.h  oasis_file_write.c  oasis_file_write.h  oasis_glob.h  oasis_glob_win32.c  oasis_initdisk.c  oasis_initdisk.h  oasis_initdisk_main.c  oasis_pcap.c  oasis_pcap.h  oasis_recv.c  oasis_sector_io.c  oasis_sector_io.h  oasis_send.c  oasis_sendrecv.c  oasis_sendrecv.h  oasis_time.c  oasis_time.h  (+6 more)
tests/: compare_md5.py  test_oasis_alloc.cpp  test_oasis_ascii.cpp  test_oasis_common.cpp  test_oasis_common.h  test_oasis_deb.cpp  test_oasis_disk_util_integration.cpp  test_oasis_extract.cpp  test_oasis_file_copy.cpp  test_oasis_file_erase.cpp  test_oasis_file_read.cpp  test_oasis_file_rename.cpp  test_oasis_file_write.cpp  test_oasis_initdisk.cpp  test_oasis_pcap.cpp  test_oasis_sector_io.cpp  test_oasis_send_recv_integration.py  test_oasis_sendrecv.cpp  test_oasis_time.cpp  test_oasis_transfer_utils.cpp  test_oasis_utils.cpp  test_oasis_wildcard.cpp
wireshark/: OASIS-send-recv-protocol.md  README.md  oasis_wireshark_dissector.lua
